feat 添加 maven-compiler-plugin 默认配置